fix list spacing

--- a/src/components/ui/editor/tiptap.css
+++ b/src/components/ui/editor/tiptap.css
@@ -168,17 +168,22 @@
 /* Lists */
 .ProseMirror ul,
 .ProseMirror ol {
-	margin: var(--editor-spacing-4) 0;
+	margin: var(--editor-spacing-1) 0;
 	padding-left: var(--editor-spacing-6);
 }
 
 .ProseMirror li {
-	margin: var(--editor-spacing-2) 0;
+	margin: var(--editor-spacing-1) 0;
 	padding-left: var(--editor-spacing-2);
 }
 
 .ProseMirror ul {
 	list-style-type: disc;
+}
+
+.ProseMirror li ul,
+.ProseMirror li ol {
+	margin: 0;
 }
 
 .ProseMirror ul ul {
